# loafers

./: .gitignore  Makefile  Makefile.am  README.mkd  TODO  autogen.sh  configure.ac  loafers.pc.in  shoes.pc.in
examples/: .gitignore  Makefile.am  hello.c  leaks.c  listen  listen-remote  listen.c  nonblock-hello.c  sockscat  sockscat.c  udphello.c
include/: _common.h  _loafers.h  _shoes.h  _statemachine.h  _stream.h  loafers.h  shoes.h
m4/: .gitignore  m4_ifnblank.m4
src/: loafers.c  shoes.c  socks.c  statemachine.c  stream.c
